--- a/JN_JD_Website/website_app/templates/password_reset_email.html
+++ b/JN_JD_Website/website_app/templates/password_reset_email.html
@@ -1,16 +1,17 @@
 {% autoescape off %}
 Hello,
 
-You're receiving this email because you requested a password reset for your account at {{ site_name }}.
+You're receiving this email because you requested a password reset for your SoundCheq account.
 
 Please go to the following page and choose a new password:
-{% block reset_link %}
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-{% endblock %}
 
 Your username, in case you've forgotten: {{ user.get_username }}
 
-Thanks for using our site!
+If you didn't request this password reset, you can safely ignore this email.
 
-The {{ site_name }} team
+Thanks for using SoundCheq!
+
+Best regards,
+The SoundCheq Team
 {% endautoescape %} 
